--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>HealthSYNC</title>
        <script>
-           window.location.href = 'frontend/APP_Screen1_1_Sign Up.html';
+           window.location.href = 'APP_Screen1_1_Sign Up.html';
        </script>
    </head>
    <body>
-       <p>If you are not redirected, <a href="frontend/APP_Screen1_1_Sign Up.html">click here</a>.</p>
+       <p>If you are not redirected, <a href="APP_Screen1_1_Sign Up.html">click here</a>.</p>
    </body>
    </html>
